# stableSquirrel

./: .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Containerfile  Makefile  README.md  SYSTEM_DESIGN_SPEC.md  config.yaml.example  mypy.ini  podman-compose.yaml  pyproject.toml  pyrightconfig.json  stable-squirrel.service  test_server.py
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DATABASE_DESIGN.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  ICECAST_RDIOSCANNER_SPECS.md  INSTALLATION.md  LLM_GUIDE.md  MONITORING.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  RDIOSCANNER_API.md  README.md  SECURITY.md  SECURITY_GUIDE.md  SYSTEM_DESIGN_SPEC.md
src/stable_squirrel/: __main__.py  config.py
src/stable_squirrel/database/: __init__.py  connection.py  models.py  operations.py  schema.py
src/stable_squirrel/security/: __init__.py  auth_service.py  upload_validation.py
src/stable_squirrel/services/: __init__.py  task_queue.py  transcription.py
src/stable_squirrel/utils/: file_operations.py
src/stable_squirrel/web/: __init__.py  app.py
src/stable_squirrel/web/routes/: api.py  health.py  rdioscanner.py  security.py
tests/: stress_test_rdioscanner.py  test_api_endpoints.py  test_config.py  test_database_operations.py  test_placeholder.py  test_rdioscanner_api.py  test_rdioscanner_security.py  test_security_api.py  test_security_validation.py  test_transcription_service.py
